feat(version): update version and read me

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raycas/storage-crypter",
-  "version": "0.0.0-development",
+  "version": "0.0.1",
   "description": "\"Local and Session storage crypter made with crypto-js\"",
   "repository": {
     "type": "git",
@@ -119,5 +119,8 @@
   },
   "dependencies": {
     "crypto-es": "^1.2.7"
+  },
+  "browser": {
+  "crypto": false
   }
 }
